Update fonts and remove duplicated info

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gustavo Morales - Web Developer</title>
   <meta name="description" content="Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor and Apple Fan">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.css">
   <link rel="stylesheet" href="public/css/print.css" media="print">
 </head>
@@ -65,9 +65,6 @@
             <li>
               <a href="https://github.com/gmoralesc/creando-apis-con-node-js" target="_blank">Crear un API con Node JS, Express y MongoDB</a>
             </li>
-            <li>
-              Ruby on Rails Up and Running videos
-            </li>
           </ul>
         </li>
         <li><strong>Learning</strong>:
@@ -78,7 +75,7 @@
         <li><strong>Watching</strong>:
           <ul>
             <li>Game Of Thrones -- Season 7 (Completed) - Of course, like another mortal in this world</li>
-            <li>Rick and Morty -- Season 3 - Great show</li>
+            <li>Rick and Morty -- Season 3 (Completed) - Great show</li>
           </ul>
         </li>
         <li><strong>Playing</strong>:
@@ -96,35 +93,25 @@
     </section>
     <section class="section">
       <h2 class="section__title">Professional experience</h2>
-      <h3 class="section__subtitle">Summary</h3>
-      <p><strong>Web enthusiastic</strong> from 1999 starts with NotePad, Macromedia Dreamweaver, Sublime
-        Text and Visual Studio Code (Microsoft, I know, something is happening in this company). Browser wars beetween Netscape
-        (now Mozilla Firefox) and Internet Exploiter (No, is no a typo). Respectful W3C standards and Javascript evangelist.</p>
-      <h3 class="section__subtitle">Current</h3>
+      <h3 class="section__subtitle">Present</h3>
       <ul>
-        <li><strong>Full Stack Software Engineer (From 2015)</strong>
-          <br><a href="http://www.zemoga.com/" target="_blank">Zemoga</a></li>
-        <li><strong>Partial time Professor (From 2006)</strong>
-          <br>Department of Computer Science, <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
-          <br>Graduate classes:
-          <ul>
-            <li>Scrum methodology</li>
-            <li>Tools for development</li>
-            <li>Web Development</li>
-          </ul>
-          Undergraduate classes:
-          <ul>
-            <li>Web Development</li>
-          </ul>
+        <li><strong>Full Stack Software Engineer (From 2015)</strong><br>
+          <a href="http://www.zemoga.com/" target="_blank">Zemoga</a>
+        </li>
+        <li><strong>Partial time Professor (From 2006)</strong><br>
+          Department of Computer Science, 
+          <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
         </li>
       </ul>
       <h3 class="section__subtitle">Past</h3>
       <ul>
-        <li><strong>Full Stack Software Engineer</strong>
-          <br>
-          <a href="https://koombea.com/" target="_blank">Koombea</a></li>
-        <li><strong>Engineer in technology for Education</strong><br> Blackboard Content Creator<br>
-          <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a></li>
+        <li><strong>Full Stack Software Engineer (2015)</strong><br>
+          <a href="https://koombea.com/" target="_blank">Koombea</a>
+        </li>
+        <li><strong>Engineer in technology for Education (From 2003 to 2015)</strong><br> 
+          Blackboard Content Creator, 
+          <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
+        </li>
       </ul>
     </section>
     <section class="section">
