Update Layout and Information

--- a/index.html
+++ b/index.html
@@ -33,111 +33,203 @@
   </header>
   <section class="content">
     <section class="section">
-      <h2 class="section__title">What I am doing</h2>
-      <ul>
-        <li><strong>Working</strong>:
-          <ul>
-            <li>
-              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a> as Full Stack Software Engineer -- So much fun
-              and learning new things everyday with a great team<br>
-              <blockquote>
-                <u>Current project</u>:<br>
+      <h2 class="section__title">1.0 - What I am doing</h2>
+      <ul class="list--boxes">
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p><strong>Working</strong></p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Full Stack Software Engineer</strong><br> 
+              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a><br> 
+              -- So much fun and learning new things everyday with a great team
+            </p>
+            <p>
+              <strong>Graduate Partial Time Professor</strong><br>
+              <a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a><br>
+              -- I love teaching
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p><strong>Writing</strong></p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              -- Sometimes the best way to learn is teaching to others
+            </p>
+            <ul>
+                <li>
+                  <a href="https://gmoralesc.gitbooks.io/introduccion-a-node-js/content/" target="_blank">Introducción a Node JS</a> (Spanish)
+                </li>
+                <li>
+                  <a href="https://github.com/gmoralesc/creando-apis-con-node-js" target="_blank">Crear un API con Node JS, Express y MongoDB</a> (Spanish)
+                </li>
+              </ul>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+              <p><strong>Learning</strong></p>
+          </div>
+          <div class="box__item box__description">
+            <p>DevOps:</p>
+            <ul>
+              <li>Docker Swarm (Udemy)</li>
+              <li>Amazon Web Services (acloudguru)</li>
+            </ul>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+              <p><strong>Watching</strong></p>
+          </div>
+          <div class="box__item box__description">
+            <p>TV Series:</p>
+            <ul>
+              <li>Game Of Thrones -- Season 7 (Completed) - Of course, like another mortal in this world</li>
+              <li>Rick and Morty -- Season 3 (Completed) - Great show</li>
+            </ul>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p><strong>Playing</strong></p>  
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://civilization.com/" target="_blank">Civilization VI</a><br>
+              -- Great strategy game turn based
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="section">
+      <h2 class="section__title">2.0 - Professional experience</h2>
+      <ul class="list--boxes">
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>Nov 2015 - Present</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Full Stack Software Engineer</strong><br>
+              <a href="http://www.zemoga.com/" target="_blank">Zemoga</a>
+            </p>
+            <ul style="list-style-type:initial">
+                <li>
+                  <strong>Current project</strong>:<br>
                   Using Node JS to consume REST Services from Backend (Java) and use as middleware to convert data and 
                   manage session storage, developing Web applications with Ember and Web components using first Backbone and now migrating to Vue JS.
-              </blockquote>
-            </li>
-            <li>
-              <a href="http://www.uninorte.edu.co/" target="_blank">Universidad del Norte</a> as Graduate Partial Time Professor -- I love teaching<br>
-                <blockquote>
-                  <u>Courses</u>:<br>
-                   - Tools for development: using Docker, git, Redmine and AWS. <br>
-                   - Web Development: using Ruby on Rails and PostgreSQL.
-                </blockquote>
-            </li>
-          </ul>
+                </li>
+            </ul>
+          </div>
         </li>
-        <li><strong>Writing</strong><br>
-          -- Sometimes the best way to learn is teaching to others:
-          <ul>
-            <li>
-              <a href="https://gmoralesc.gitbooks.io/introduccion-a-node-js/content/" target="_blank">Introducción a Node JS</a>
-            </li>
-            <li>
-              <a href="https://github.com/gmoralesc/creando-apis-con-node-js" target="_blank">Crear un API con Node JS, Express y MongoDB</a>
-            </li>
-          </ul>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>Jan 2006 - Present</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Partial Time Professor</strong><br>
+              <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a><br>
+              Department of computer science
+            </p>
+            <ul style="list-style-type:initial">
+              <li>
+                  <strong>Courses</strong>:<br>
+                  - Tools for development: using Docker, git, Redmine and AWS. <br>
+                  - Web Development: using Ruby on Rails and PostgreSQL.
+              </li>
+            </ul>
+          </div>
         </li>
-        <li><strong>Learning</strong>:
-          <ul>
-            <li>Docker Swarm and Amazon Web Services</li>
-          </ul>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>Sep 2015 - Nov 2015</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Full Stack Software Engineer (Sep 2015)</strong><br>
+              <a href="https://koombea.com/" target="_blank">Koombea</a>
+            </p>
+          </div>
         </li>
-        <li><strong>Watching</strong>:
-          <ul>
-            <li>Game Of Thrones -- Season 7 (Completed) - Of course, like another mortal in this world</li>
-            <li>Rick and Morty -- Season 3 (Completed) - Great show</li>
-          </ul>
-        </li>
-        <li><strong>Playing</strong>:
-          <ul>
-            <li><a href="https://civilization.com/" target="_blank">Civilization VI</a> -- Great strategy game turn based</li>
-          </ul>
-        </li>
-        <li><strong>Personal projects</strong>:
-          <ul>
-            <li><a href="https://www.npmjs.com/package/costelog" target="_blank">costelog</a></li>
-            <li>Check out my <a href="http://github.com/gmoralesc" target="_blank">Github</a></li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <section class="section">
-      <h2 class="section__title">Professional experience</h2>
-      <h3 class="section__subtitle">Present</h3>
-      <ul>
-        <li><strong>Full Stack Software Engineer (From 2015)</strong><br>
-          <a href="http://www.zemoga.com/" target="_blank">Zemoga</a>
-        </li>
-        <li><strong>Partial time Professor (From 2006)</strong><br>
-          Department of Computer Science, 
-          <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
-        </li>
-      </ul>
-      <h3 class="section__subtitle">Past</h3>
-      <ul>
-        <li><strong>Full Stack Software Engineer (2015)</strong><br>
-          <a href="https://koombea.com/" target="_blank">Koombea</a>
-        </li>
-        <li><strong>Engineer in technology for Education (From 2003 to 2015)</strong><br> 
-          Blackboard Content Creator, 
-          <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>May 2003 - Sep 2015</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Engineer in technology for Education</strong><br> 
+              <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a><br>
+              Teaching and learning center 
+            </p>
+          </div>
         </li>
       </ul>
     </section>
     <section class="section">
-      <h2 class="section__title">Education</h2>
+      <h2 class="section__title">3.0 - Education</h2>
       <h3 class="section__subtitle">Degrees</h3>
-      <ul>
-        <li><strong>Engineer in Computer Science (2003)</strong>
-          <br><a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a></li>
-        <li><strong>Magister in IT Governance (2011)</strong>
-          <br><a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a></li>
-      </ul>
-      <h3 class="section__subtitle">Certified Courses</h3>
-      <ul>
-        <li>SCRUM Developer Certified</li>
-        <li>Adobe Certified Expert (ACE) and Adobe Certified Instructor (ACI)
+      <ul class="list--boxes">
+        <li class="box__container">
+            <div class="box__item box__left">
+              <p>Sep 2003</p>
+            </div>
+            <div class="box__item box__description">
+              <p>
+                <strong>Engineer in Computer Science</strong><br>
+                <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
+              </p>
+          </div>
         </li>
-        <li>Red Hat Linux System Administration RH133</li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>Sep 2011</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <strong>Magister in IT Governance (2011)</strong><br>
+              <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
+            </p>
+          </div>
+        </li>
+      </ul>
+      <h3 class="section__subtitle">Certifications</h3>
+      <ul class="list--boxes">
+        <li class="box__container">
+            <div class="box__item box__left">
+              <p>Sep 2015</p>
+            </div>
+            <div class="box__item box__description">
+              <p>
+                SCRUM Developer Certified<br>
+                <a href="http://www.scrumagileinstitute.com/" target="_blank">Scrum Agile Institute</a>
+              </p>
+            </div>
+          </li>
       </ul>
       <h3 class="section__subtitle">Honors and awards</h3>
-      <ul>
-        <li>“Excelencia Académica en el Aula de Clase” (Award for Academic Excellence in the Classroom) 2009, 2010, 2011, 2012,
-          2013 - Universidad del Norte, Barranquilla, Colombia.</li>
+      <ul class="list--boxes">
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>2009, 2010, 2011, 2012, 2013</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              Award for Academic Excellence in the Classroom<br>
+              <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
+            </p>
+          </div>
+        </li>
       </ul>
     </section>
     <section class="section" id="technologies">
-      <h2 class="section__title">Technologies</h2>
+      <h2 class="section__title">4.0 Technologies</h2>
       <label for="filter">Filter:</label>
       <select onchange="filter_tecnologies()" id="filter">
         <option value="0">Technologies that I have worked so far</option>
