Update Print Styles

--- a/index.html
+++ b/index.html
@@ -228,6 +228,7 @@
         </li>
       </ul>
     </section>
+    <div class="page-break"></div>
     <section class="section" id="technologies">
       <h2 class="section__title">4.0 Technologies</h2>
       <label for="filter">Filter:</label>
