--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Full Stack Software Engineer (Sep 2015)</strong><br>
+              <strong>Full Stack Software Engineer</strong><br>
               <a href="https://koombea.com/" target="_blank">Koombea</a>
             </p>
           </div>
