Update projects and summary

--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
       <h1 class="card__title">Gustavo Morales</h1>
       <p class="card__image"><img src="public/images/me-circle.png" alt="Gustavo Morales"></p>
       <h2 class="card__subtitle">About me</h2>
-      <p>Husband, Father, Self learner and Apple Fan
-        <br>Living in <a href="https://www.google.com.co/maps/place/Barranquilla,+Atl%C3%A1ntico/@10.9915714,-74.979092,11z/data=!3m1!4b1!4m5!3m4!1s0x8ef42c5022d41139:0x7777c8d5cf47bec!8m2!3d10.983812!4d-74.818017?hl=en"
-          target="_blank">Barranquilla, Colombia</a></p>
-      <p>Full Stack Software Engineer, Undergraduate and Graduate Professor, Engineer in Computer Science</p>
+      <p>Full Stack Software Engineer, Professor in Graduate class, Engineer in Computer Science</p>
       <p>
         Webpage: <a href="http://gmoralesc.me">gmoralesc.me</a>
-        <br> Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">gmoralesc</a>
+        <br> Linkedin: <a href="https://co.linkedin.com/in/gmoralesc">linkedin.com/in/gmoralesc</a>
         <br> Email: <a href="mailto:gustavo.morales@gmail.com">gustavo.morales@gmail.com</a>
         <br> Twitter: <a href="https://twitter.com/gmoralesc" target="_blank">@gmoralesc</a>
         <br> Github: <a href="http://github.com/gmoralesc" target="_blank">github.com/gmoralesc</a>
@@ -65,7 +62,7 @@
                   <a href="https://gmoralesc.gitbooks.io/introduccion-a-node-js/content/" target="_blank">Introducción a Node JS</a> (Spanish)
                 </li>
                 <li>
-                  <a href="https://github.com/gmoralesc/creando-apis-con-node-js" target="_blank">Crear un API con Node JS, Express y MongoDB</a> (Spanish)
+                  <a href="https://github.com/gmoralesc/creando-apis-con-node-js/wiki" target="_blank">Crear un API con Node JS, Express y MongoDB</a> (Spanish)
                 </li>
               </ul>
           </div>
@@ -89,8 +86,8 @@
           <div class="box__item box__description">
             <p>TV Series:</p>
             <ul>
-              <li>Game Of Thrones -- Season 7 (Completed) - Of course, like another mortal in this world</li>
-              <li>Rick and Morty -- Season 3 (Completed) - Great show</li>
+              <li>Game Of Thrones -- Season 7 (Completed)</li>
+              <li>Rick and Morty -- Season 3 (Completed)</li>
             </ul>
           </div>
         </li>
@@ -156,6 +153,11 @@
               <strong>Full Stack Software Engineer</strong><br>
               <a href="https://koombea.com/" target="_blank">Koombea</a>
             </p>
+            <ul style="list-style-type:initial">
+              <li>
+                Backend and API in Ruby on Rails, Front End with Angular 1.x
+              </li>
+          </ul>
           </div>
         </li>
         <li class="box__container">
@@ -168,6 +170,17 @@
               <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a><br>
               Teaching and learning center 
             </p>
+            <ul style="list-style-type:initial">
+              <li>
+                Blackboard content creator and Blackboard instructor for teachers
+              </li>
+              <li>
+                Manage and coach teaching assistants groups to support teachers in the use of educational technologies
+              </li>
+              <li>
+                Create and mantain internal web sites with Joomla (LAMP)
+              </li>
+          </ul>
           </div>
         </li>
       </ul>
