Optimize print view

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </ul>
           </div>
         </li>
-        <li class="box__container">
+        <li class="box__container no-print">
           <div class="box__item box__left">
               <p><strong>Watching</strong></p>
           </div>
@@ -91,7 +91,7 @@
             </ul>
           </div>
         </li>
-        <li class="box__container">
+        <li class="box__container no-print">
           <div class="box__item box__left">
             <p><strong>Playing</strong></p>  
           </div>
