Remove year in the Master Degree title

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Magister in IT Governance (2011)</strong><br>
+              <strong>Magister in IT Governance</strong><br>
               <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
             </p>
           </div>
