--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 Telemedicine project
               </li>
               <li>
-                Create and mantain educational resources
+                Create and mantain educational resources with PHP and MySQL
               </li>
             </ul>
           </div>
