Add public project section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             <ul style="list-style-type:initial">
               <li>
                 <strong>Current project</strong>:
-                <br>Using Node JS as middleware to consume REST API from Backend (Java), parse data and manage
-                authentication and authorization. Single Page Application with Ember JS and Web components with Vue JS.
+                <br>Using Node JS as middleware to consume REST API from Backend (Java), parse data and manage authentication
+                and authorization. Single Page Application with Ember JS and Web components with Vue JS.
               </li>
             </ul>
           </div>
@@ -204,17 +204,18 @@
           </div>
         </li>
         <li class="box__container">
-            <div class="box__item box__left">
-              <p>Sep 2014 - Present</p>
-            </div>
-            <div class="box__item box__description">
-              <p>
-                  Web Application Architectures
-                <br>
-                <a href="https://www.coursera.org/signature/certificate/ZZTRJKVLX2?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BrCMnMujuQK2FbCxJIcuBVw%3D%3D" target="_blank">Coursera Verified Certificates</a>
-              </p>
-            </div>
-          </li>
+          <div class="box__item box__left">
+            <p>Sep 2014 - Present</p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              Web Application Architectures
+              <br>
+              <a href="https://www.coursera.org/signature/certificate/ZZTRJKVLX2?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base%3BrCMnMujuQK2FbCxJIcuBVw%3D%3D"
+                target="_blank">Coursera Verified Certificates</a>
+            </p>
+          </div>
+        </li>
       </ul>
       <h3 class="section__subtitle">Honors and awards</h3>
       <ul class="list--boxes">
@@ -237,7 +238,9 @@
       <ul class="list--boxes">
         <li class="box__container">
           <div class="box__item box__left">
-            <p><strong>In progress</strong></p>
+            <p>
+              <strong>In progress</strong>
+            </p>
           </div>
           <div class="box__item box__description">
             <p>
@@ -253,6 +256,108 @@
       </ul>
     </section>
     <div class="page-break"></div>
+    <section class="section">
+      <h2 class="section__title">4.0 - Public projects</h2>
+      <ul class="list--boxes">
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Sep 2017</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/node-auth" target="_blank">Node Auth</a>
+              <br>Authentication and authorization with Node JS and JSON Web Tokens
+              <br>Node JS, Mongo DB, JWT, webpack
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Aug 2017</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/photogram" target="_blank">Photogram</a>
+              <br>Application to upload and share photos with friends
+              <br>Ruby on Rails, Postgresql
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Jul 2017</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/sinatra101" target="_blank">Ruby API</a>
+              <br>Boilerplate of REST API using Sinatra
+              <br>Ruby, Sinatra
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Feb 2017</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/costelog" target="_blank">Costelog</a>
+              <br>Library to log with costeño (Colombia) idioms
+              <br>Node JS, webpack, Travis CI
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Apr 2015</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/academia" target="_blank">Academia</a>
+              <br>HTML / CSS template
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Mar 2015</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/orangebox" target="_blank">Oragebox</a>
+              <br>HTML / CSS template
+            </p>
+          </div>
+        </li>
+        <li class="box__container">
+          <div class="box__item box__left">
+            <p>
+              <strong>Oct 2013</strong>
+            </p>
+          </div>
+          <div class="box__item box__description">
+            <p>
+              <a href="https://github.com/gmoralesc/timetracker" target="_blank">Time tracker</a>
+              <br>Application to track hours in projects
+              <br>PHP and MySQL
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
   </section>
 </body>
+
 </html>
