--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gustavo Morales - Web Developer</title>
-  <meta name="description" content="Engineer in Computer Science, Web Developer, Undergraduate and Graduate Professor and Apple Fan">
+  <title>Gustavo Morales - Software Engineer, Professor and Coaching</title>
+  <meta name="description" content="Engineer in Computer Science, Software Engineer, Undergraduate and Graduate Professor and Coaching">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="public/css/main.css">
   <link rel="stylesheet" href="public/css/print.css" media="print">
@@ -20,7 +20,7 @@
         <img src="public/images/me-circle.png" alt="Gustavo Morales">
       </p>
       <h2 class="card__subtitle">About me</h2>
-      <p>Software Developer Engineer, Partial Time Professor and Coaching</p>
+      <p>Software Engineer, Professor and Coaching</p>
       <p>
         Webpage:
         <a href="http://gmoralesc.me">gmoralesc.me</a>
@@ -45,7 +45,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Full Stack Software Engineer</strong>
+              <strong>Software Engineer (Full-time)</strong>
               <br>
               <a href="http://www.zemoga.com/" target="_blank">Zemoga</a>
             </p>
@@ -64,7 +64,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Partial Time Professor</strong>
+              <strong>Professor (Partial time)</strong>
               <br>
               <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
               <br> Department of computer science
@@ -84,7 +84,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Coaching</strong>
+              <strong>Coaching (Partial time)</strong>
               <br>
               <a href="https://makeitreal.camp" target="_blank">Make it Real</a>
             </p>
@@ -102,7 +102,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Full Stack Software Engineer</strong>
+              <strong>Software Engineer</strong>
               <br>
               <a href="https://koombea.com/" target="_blank">Koombea</a>
             </p>
@@ -170,7 +170,7 @@
           </div>
           <div class="box__item box__description">
             <p>
-              <strong>Magister in IT Governance</strong>
+              <strong>Master in IT Governance</strong>
               <br>
               <a href="http://www.uninorte.edu.co" target="_blank">Universidad del Norte</a>
             </p>
@@ -255,7 +255,6 @@
         </li>
       </ul>
     </section>
-    <div class="page-break"></div>
     <section class="section">
       <h2 class="section__title">4.0 - Public projects</h2>
       <ul class="list--boxes">
