--- a/index.html
+++ b/index.html
@@ -52,8 +52,12 @@
             <ul style="list-style-type:initial">
               <li>
                 <strong>Current project</strong>:
-                <br>Using Node JS as middleware to consume REST API from Backend (Java), parse data and manage authentication
-                and authorization. Single Page Application with Ember JS and Web components with Vue JS.
+                <br>Single Page Application using Vue JS 2, using Amazon Gateway and Lambda functions as middleware.
+              </li>
+              <li>
+                <strong>Past project</strong>:
+                <br>Single Page Application with Ember JS and Web components with Vue JS 1, using Node JS as middleware 
+                to consume REST API, parse data and manage authentication and authorization. 
               </li>
             </ul>
           </div>
