--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.ad232882.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.d1413ecb.js"><link rel="prefetch" href="/assets/js/4.ce14344d.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.dc433d22.js"><link rel="prefetch" href="/assets/js/7.387aa072.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
+    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.c5f9dcd5.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.d1413ecb.js"><link rel="prefetch" href="/assets/js/4.ce14344d.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.dc433d22.js"><link rel="prefetch" href="/assets/js/7.387aa072.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
     <link rel="stylesheet" href="/assets/css/0.styles.140a3a0a.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>There's nothing here.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.ad232882.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.c5f9dcd5.js" defer></script>
   </body>
 </html>
