--- a/books/index.html
+++ b/books/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.d139d339.js" as="script"><link rel="preload" href="/assets/js/4.a15073bb.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
+    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.080b0289.js" as="script"><link rel="preload" href="/assets/js/4.8dcc0bc7.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
     <link rel="stylesheet" href="/assets/css/0.styles.140a3a0a.css">
   </head>
   <body>
@@ -17,7 +17,9 @@
         Paperback
       </a></li></ul> <p><strong>Sample</strong></p> <ul><li><a href="/introduccion-a-node-js-sample.pdf" target="_blank">
         Download
-      </a></li></ul></div> <br style="clear:left"> <h2 id="crear-un-api-con-node-js-express-y-mongodb-spanish"><a href="#crear-un-api-con-node-js-express-y-mongodb-spanish" aria-hidden="true" class="header-anchor">#</a> Crear un API con Node JS, Express y MongoDB (Spanish)</h2> <p><a href="https://gmoralesc.gitbooks.io/creando-apis-con-node-js-express-y-mongodb/content/" target="_blank" rel="noopener noreferrer">Read online DRAFT (Spanish)<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" x="0px" y="0px" viewBox="0 0 100 100" width="15" height="15" class="icon outbound"><path fill="currentColor" d="M18.8,85.1h56l0,0c2.2,0,4-1.8,4-4v-32h-8v28h-48v-48h28v-8h-32l0,0c-2.2,0-4,1.8-4,4v56C14.8,83.3,16.6,85.1,18.8,85.1z"></path> <polygon fill="currentColor" points="45.7,48.7 51.3,54.3 77.2,28.5 77.2,37.2 85.2,37.2 85.2,14.9 62.8,14.9 62.8,22.9 71.5,22.9"></polygon></svg></a></p></div> <div class="page-edit"><!----> <!----></div> <!----> </div> <!----></div></div>
-    <script src="/assets/js/app.d139d339.js" defer></script><script src="/assets/js/4.a15073bb.js" defer></script>
+      </a></li></ul></div> <br style="clear:left"> <h2 id="crear-un-api-con-node-js-express-y-mongodb-spanish"><a href="#crear-un-api-con-node-js-express-y-mongodb-spanish" aria-hidden="true" class="header-anchor">#</a> Crear un API con Node JS, Express y MongoDB (Spanish)</h2> <p><strong>Sample (DRAFT)</strong></p> <ul><li><a href="/creando-apis-con-node-js-express-y-mongodb-draft-sample.pdf" target="_blank">
+      Download
+    </a></li></ul></div> <div class="page-edit"><!----> <!----></div> <!----> </div> <!----></div></div>
+    <script src="/assets/js/app.080b0289.js" defer></script><script src="/assets/js/4.8dcc0bc7.js" defer></script>
   </body>
 </html>
