Update Books Section

--- a/books/index.html
+++ b/books/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.080b0289.js" as="script"><link rel="preload" href="/assets/js/4.8dcc0bc7.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
+    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.cf0ebbba.js" as="script"><link rel="preload" href="/assets/js/4.95fed864.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
     <link rel="stylesheet" href="/assets/css/0.styles.140a3a0a.css">
   </head>
   <body>
@@ -17,9 +17,9 @@
         Paperback
       </a></li></ul> <p><strong>Sample</strong></p> <ul><li><a href="/introduccion-a-node-js-sample.pdf" target="_blank">
         Download
-      </a></li></ul></div> <br style="clear:left"> <h2 id="crear-un-api-con-node-js-express-y-mongodb-spanish"><a href="#crear-un-api-con-node-js-express-y-mongodb-spanish" aria-hidden="true" class="header-anchor">#</a> Crear un API con Node JS, Express y MongoDB (Spanish)</h2> <p><strong>Sample (DRAFT)</strong></p> <ul><li><a href="/creando-apis-con-node-js-express-y-mongodb-draft-sample.pdf" target="_blank">
-      Download
-    </a></li></ul></div> <div class="page-edit"><!----> <!----></div> <!----> </div> <!----></div></div>
-    <script src="/assets/js/app.080b0289.js" defer></script><script src="/assets/js/4.8dcc0bc7.js" defer></script>
+      </a></li></ul></div> <br style="clear:left"> <h2 id="crear-un-api-con-node-js-express-y-mongodb-spanish"><a href="#crear-un-api-con-node-js-express-y-mongodb-spanish" aria-hidden="true" class="header-anchor">#</a> Crear un API con Node JS, Express y MongoDB (Spanish)</h2> <div><img src="/creando-apis-con-node-js-cover.jpg" style="float:left;margin-right:32px"> <p><strong>Sample (DRAFT)</strong></p> <ul><li><a href="/creando-apis-con-node-js-express-y-mongodb-draft-sample.pdf" target="_blank">
+        Download
+      </a></li></ul></div> <br style="clear:left"></div> <div class="page-edit"><!----> <!----></div> <!----> </div> <!----></div></div>
+    <script src="/assets/js/app.cf0ebbba.js" defer></script><script src="/assets/js/4.95fed864.js" defer></script>
   </body>
 </html>
