--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.080b0289.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/4.8dcc0bc7.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
+    <link rel="preload" href="/assets/css/0.styles.140a3a0a.css" as="style"><link rel="preload" href="/assets/js/app.cf0ebbba.js" as="script"><link rel="prefetch" href="/assets/js/2.43dae51c.js"><link rel="prefetch" href="/assets/js/3.6c989ed5.js"><link rel="prefetch" href="/assets/js/4.95fed864.js"><link rel="prefetch" href="/assets/js/5.ef0777ab.js"><link rel="prefetch" href="/assets/js/6.c3089e16.js"><link rel="prefetch" href="/assets/js/7.9ff01622.js"><link rel="prefetch" href="/assets/js/8.e6178035.js">
     <link rel="stylesheet" href="/assets/css/0.styles.140a3a0a.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
-    <script src="/assets/js/app.080b0289.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="content"><h1>404</h1> <blockquote>That's a Four-Oh-Four.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div></div>
+    <script src="/assets/js/app.cf0ebbba.js" defer></script>
   </body>
 </html>
