--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>gmoralesc.me</title>
-    <meta name="description" content="Software Engineer, Professor and Coaching">
+    <meta name="description" content="Software Engineer, Professor and Mentoring">
     
     
-    <link rel="preload" href="/assets/css/0.styles.6538a964.css" as="style"><link rel="preload" href="/assets/js/app.6451b49b.js" as="script"><link rel="preload" href="/assets/js/4.24c292db.js" as="script"><link rel="prefetch" href="/assets/js/10.dffb93f3.js"><link rel="prefetch" href="/assets/js/2.86ca54e8.js"><link rel="prefetch" href="/assets/js/3.81110e1e.js"><link rel="prefetch" href="/assets/js/5.5ebc4a41.js"><link rel="prefetch" href="/assets/js/6.c7ee1bfb.js"><link rel="prefetch" href="/assets/js/7.45690545.js"><link rel="prefetch" href="/assets/js/8.f6efb004.js"><link rel="prefetch" href="/assets/js/9.c3f1b8e8.js">
-    <link rel="stylesheet" href="/assets/css/0.styles.6538a964.css">
+    <link rel="preload" href="/assets/css/0.styles.7fea307e.css" as="style"><link rel="preload" href="/assets/js/app.54f5e3fb.js" as="script"><link rel="preload" href="/assets/js/4.256fdb43.js" as="script"><link rel="prefetch" href="/assets/js/10.c9edc631.js"><link rel="prefetch" href="/assets/js/2.1dbca61c.js"><link rel="prefetch" href="/assets/js/3.1be3cb59.js"><link rel="prefetch" href="/assets/js/5.fe7aeb41.js"><link rel="prefetch" href="/assets/js/6.806b87a6.js"><link rel="prefetch" href="/assets/js/7.42f47090.js"><link rel="prefetch" href="/assets/js/8.89c93241.js"><link rel="prefetch" href="/assets/js/9.f71cdef3.js">
+    <link rel="stylesheet" href="/assets/css/0.styles.7fea307e.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.6451b49b.js" defer></script><script src="/assets/js/4.24c292db.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.54f5e3fb.js" defer></script><script src="/assets/js/4.256fdb43.js" defer></script>
   </body>
 </html>
