--- a/books/index.html
+++ b/books/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Books | gmoralesc.me</title>
-    <meta name="description" content="Software Engineer, Professor and Mentoring">
+    <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.7fea307e.css" as="style"><link rel="preload" href="/assets/js/app.54f5e3fb.js" as="script"><link rel="preload" href="/assets/js/2.1dbca61c.js" as="script"><link rel="preload" href="/assets/js/6.806b87a6.js" as="script"><link rel="prefetch" href="/assets/js/10.c9edc631.js"><link rel="prefetch" href="/assets/js/3.1be3cb59.js"><link rel="prefetch" href="/assets/js/4.256fdb43.js"><link rel="prefetch" href="/assets/js/5.fe7aeb41.js"><link rel="prefetch" href="/assets/js/7.42f47090.js"><link rel="prefetch" href="/assets/js/8.89c93241.js"><link rel="prefetch" href="/assets/js/9.f71cdef3.js">
+    <link rel="preload" href="/assets/css/0.styles.7fea307e.css" as="style"><link rel="preload" href="/assets/js/app.f4e34ef3.js" as="script"><link rel="preload" href="/assets/js/2.1dbca61c.js" as="script"><link rel="preload" href="/assets/js/6.8ce81325.js" as="script"><link rel="prefetch" href="/assets/js/10.c9edc631.js"><link rel="prefetch" href="/assets/js/3.1be3cb59.js"><link rel="prefetch" href="/assets/js/4.256fdb43.js"><link rel="prefetch" href="/assets/js/5.fe7aeb41.js"><link rel="prefetch" href="/assets/js/7.6a137d49.js"><link rel="prefetch" href="/assets/js/8.6bd2d0d4.js"><link rel="prefetch" href="/assets/js/9.b470f2f6.js">
     <link rel="stylesheet" href="/assets/css/0.styles.7fea307e.css">
   </head>
   <body>
@@ -22,6 +22,6 @@
       </a></li></ul></div> <br style="clear:left;"> <h2 id="crear-un-api-con-node-js-express-y-mongodb-spanish"><a href="#crear-un-api-con-node-js-express-y-mongodb-spanish" class="header-anchor">#</a> Crear un API con Node JS, Express y MongoDB (Spanish)</h2> <div><img src="/creando-apis-con-node-js-cover.jpg" style="float:left;margin-right:32px;"> <p><strong>Sample (DRAFT)</strong></p> <ul><li><a href="/creando-apis-con-node-js-express-y-mongodb-draft-sample.pdf" target="_blank">
         Download
       </a></li></ul></div> <br style="clear:left;"></div> <footer class="page-edit"><!----> <!----></footer> <!----> </main></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.54f5e3fb.js" defer></script><script src="/assets/js/2.1dbca61c.js" defer></script><script src="/assets/js/6.806b87a6.js" defer></script>
+    <script src="/assets/js/app.f4e34ef3.js" defer></script><script src="/assets/js/2.1dbca61c.js" defer></script><script src="/assets/js/6.8ce81325.js" defer></script>
   </body>
 </html>
