--- a/404.html
+++ b/404.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Software Engineer, Professor and Coaching">
     
     
-    <link rel="preload" href="/assets/css/0.styles.7fea307e.css" as="style"><link rel="preload" href="/assets/js/app.f4e34ef3.js" as="script"><link rel="preload" href="/assets/js/4.256fdb43.js" as="script"><link rel="prefetch" href="/assets/js/10.c9edc631.js"><link rel="prefetch" href="/assets/js/2.1dbca61c.js"><link rel="prefetch" href="/assets/js/3.1be3cb59.js"><link rel="prefetch" href="/assets/js/5.fe7aeb41.js"><link rel="prefetch" href="/assets/js/6.8ce81325.js"><link rel="prefetch" href="/assets/js/7.6a137d49.js"><link rel="prefetch" href="/assets/js/8.6bd2d0d4.js"><link rel="prefetch" href="/assets/js/9.b470f2f6.js">
+    <link rel="preload" href="/assets/css/0.styles.7fea307e.css" as="style"><link rel="preload" href="/assets/js/app.3b64a60b.js" as="script"><link rel="preload" href="/assets/js/4.256fdb43.js" as="script"><link rel="prefetch" href="/assets/js/10.c9edc631.js"><link rel="prefetch" href="/assets/js/2.1dbca61c.js"><link rel="prefetch" href="/assets/js/3.1be3cb59.js"><link rel="prefetch" href="/assets/js/5.fe7aeb41.js"><link rel="prefetch" href="/assets/js/6.39161a81.js"><link rel="prefetch" href="/assets/js/7.42f47090.js"><link rel="prefetch" href="/assets/js/8.6bd2d0d4.js"><link rel="prefetch" href="/assets/js/9.3f15d4fe.js">
     <link rel="stylesheet" href="/assets/css/0.styles.7fea307e.css">
   </head>
   <body>
-    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>How did we get here?</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
-    <script src="/assets/js/app.f4e34ef3.js" defer></script><script src="/assets/js/4.256fdb43.js" defer></script>
+    <div id="app" data-server-rendered="true"><div class="theme-container"><div class="theme-default-content"><h1>404</h1> <blockquote>Looks like we've got some broken links.</blockquote> <a href="/" class="router-link-active">Take me home.</a></div></div><div class="global-ui"></div></div>
+    <script src="/assets/js/app.3b64a60b.js" defer></script><script src="/assets/js/4.256fdb43.js" defer></script>
   </body>
 </html>
